NEW: recalcuateds descriptions on description deletion

--- a/frontend/setmaker.html
+++ b/frontend/setmaker.html
@@ -1096,6 +1096,8 @@
           addDescriptionClicked
         );
       }
+
+      redoDescriptionSpread(element_row);
     }
   </script>
 </html>
